--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,21 @@
+jsonpickle==1.2
+MouseInfo==0.0.4
+numpy==1.16.4
+Pillow==6.1.0
+PyAutoGUI==0.9.46
+PyGetWindow==0.0.6
+PyMsgBox==1.0.7
 pynput==1.4.2
+pyparsing==2.4.0
+pyperclip==1.7.0
+PyQt5==5.13.0
+PyQt5-sip==4.19.18
+PyRect==0.1.4
+PyScreeze==0.1.22
+PySimpleGUI==4.0.0
+PySimpleGUIQt==0.26.0
 python-xlib==0.25
+PyTweening==1.0.3
+pytz==2019.1
 six==1.12.0
+svgwrite==1.3.1
