--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
+atomicwrites==1.3.0
+attrs==19.1.0
+colorama==0.4.1
+importlib-metadata==0.18
 jsonpickle==1.2
+more-itertools==7.1.0
 MouseInfo==0.0.4
 numpy==1.16.4
+packaging==19.0
 Pillow==6.1.0
+pluggy==0.12.0
+py==1.8.0
 PyAutoGUI==0.9.46
 PyGetWindow==0.0.6
 PyMsgBox==1.0.7
@@ -14,8 +22,11 @@ PyRect==0.1.4
 PyScreeze==0.1.22
 PySimpleGUI==4.0.0
 PySimpleGUIQt==0.26.0
+pytest==5.0.1
 python-xlib==0.25
 PyTweening==1.0.3
 pytz==2019.1
 six==1.12.0
 svgwrite==1.3.1
+wcwidth==0.1.7
+zipp==0.5.2
