--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 atomicwrites==1.3.0
 attrs==19.1.0
 colorama==0.4.1
+coverage==4.5.4
+DateTime==4.3
 importlib-metadata==0.18
 jsonpickle==1.2
 more-itertools==7.1.0
@@ -23,10 +25,13 @@ PyScreeze==0.1.22
 PySimpleGUI==4.0.0
 PySimpleGUIQt==0.26.0
 pytest==5.0.1
+pytest-cov==2.7.1
 python-xlib==0.25
+python3-xlib==0.15
 PyTweening==1.0.3
 pytz==2019.1
 six==1.12.0
 svgwrite==1.3.1
 wcwidth==0.1.7
 zipp==0.5.2
+zope.interface==4.6.0
