--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,10 @@ jobs:
       - python/install-deps
       - python/save-cache
       - run:
-          command: ./manage.py test
+          command: py.test --cov cursor --cov-report html
           name: Test
+      - store_artifacts:
+          path: htmlcov
 
 workflows:
   main:
