--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
       - run:
           name: Install dependencies
           command: pip3 install -r requirements.txt
+      - run: 
+          name: "Setup custom environment variables"
+          command: echo 'export DISPLAY=":0.0"' >> $BASH_ENV # Redirect MY_ENV_VAR into $BASH_ENV
       - run:
           name: Run tests
           command: py.test --cov cursor --cov-report html
