--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - run:
           name: Download and start X
           command: |
-            sudo apt-get install -y x11vnc
+            apt-get install -y x11vnc
             x11vnc -forever -nopw
           background: true
       - run:
