--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,7 @@ jobs:
           command: |
             apt-get update
             apt-get install -y xvfb
-            x11vnc -forever -nopw
-          background: true
+          background: false
       - run:
           name: Running X virtual framebuffer
           command: Xvfb -ac :99 -screen 0 1280x1024x16 +extension RANDR > /dev/null 2>&1
