--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
           name: Run tests
           command: |
             export DISPLAY=:99
-            cd cursor
+            pwd
             py.test --cov cursor --cov-report html
             mv htmlcov tests/artifacts/
       - store_artifacts:
