--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
       - run:
           name: Install xvfb
           command: |
+            apt-get update
             apt-get install -y xvfb
           background: false
       - run:
