--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,9 @@ jobs:
       - checkout
       - run:
           name: Install dependencies
-          command: pip3 install -r requirements.txt
+          command: |
+          pip3 install -r requirements.txt
+          pip3 install -e .
       - run:
           name: Install xvfb
           command: |
