--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pyparsing==2.4.0
 pyperclip==1.7.0
 PyRect==0.1.4
 PyScreeze==0.1.22
+pystray==0.15.0
 pytest==5.0.1
 pytest-cov==2.7.1
 python-xlib==0.25
@@ -29,6 +30,7 @@ PyTweening==1.0.3
 pytz==2019.1
 six==1.12.0
 svgwrite==1.3.1
+wasabi==0.6.0
 wcwidth==0.1.7
 zipp==0.5.2
 zope.interface==4.6.0
