--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ DateTime==4.3
 flake8==3.7.9
 importlib-metadata==1.6.0
 jsonpickle==1.3
+Kivy==2.0.0rc1
+kivy-deps.glew==0.2.0
+kivy-deps.sdl2==0.2.0
 more-itertools==8.2.0
 MouseInfo==0.1.3
 numpy==1.18.2
