--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,8 +23,7 @@ jobs:
         uses: wearerequired/lint-action@v1
         with:
           github_token: ${{ secrets.github_token }}
-          max-line-length: "100"
+          max-line-length: 100
           # Enable linters
           black: true
           flake8: true
-          
