--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
           name: Install dependencies
           command: |
             pip3 install --upgrade pip
+            git submodule update --init --recursive
             pip3 install -r requirements.txt
             pip3 install -e .
       - run:
