--- a/cursor-rust/Cargo.toml
+++ b/cursor-rust/Cargo.toml
@@ -17,3 +17,5 @@ base64 = "0.13.0"
 tao = "0.4.0"
 simple_logger = "1.11.0"
 flate2 = "1.0.20"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
