aligns run tasks with type shell

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,8 +3,11 @@
     "tasks": [
         {
             "label": "cargo build",
-            "type": "cargo",
-            "subcommand": "build",
+            "type": "shell",
+            "options": {
+                "cwd": "${workspaceFolder}/cursor-rust"
+            },
+            "command": "cargo build",
             "problemMatcher": [
                 "$rustc"
             ]
