--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ streamlit==0.57.3
 python-osc==1.7.4
 mlrose-hiive==2.1.3
 fpdf2==2.3.4
-pygame=2.1.2
+pygame==2.1.2
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.9.0
 pyqt5==5.15.4
