--- a/tools/octet/config_client.ini
+++ b/tools/octet/config_client.ini
@@ -2,5 +2,5 @@
 hostname = marx1
 target = localhost
 port = 12345
-offline_mode = False
-serial_timeout = 30
+offline_mode = True
+serial_timeout = 1
