--- a/tools/octet/config_client.ini
+++ b/tools/octet/config_client.ini
@@ -2,7 +2,7 @@
 hostname = marx1
 target = localhost
 port = 12345
-offline_mode = True
+offline_mode = False
 serial_timeout = 30
 midique = True
 launchpad = True
