--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v1
         with:
-          python-version: 3.9
+          python-version: 3.10
 
       - name: Install Python dependencies
         run: pip install black flake8
@@ -27,4 +27,4 @@ jobs:
           # Enable linters
           black: false
           flake8: true
-          flake8_args: --max-line-length 120 --ignore=E402,W503,E203,E303,E722
+          flake8_args: --max-line-length 120 --ignore=E402,W503,E203,E303,E722,E741
