--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
+            apt-get update
+            apt-get install gcc
             pip3 install --upgrade pip
             pip3 install -r requirements.txt
             pip3 install -e .
