adds 30x50cm plotter out format

--- a/cursor/data/plotters.yaml
+++ b/cursor/data/plotters.yaml
@@ -97,6 +97,12 @@
         - -13791
         - 19230
         - 13791
+    - size: 30x50
+      bb:
+        - -8925
+        - -5813
+        - 8925
+        - 5813
     - size: a1
       bb:
         - -16090
