--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/cursor
     docker:
-      - image: python:3.10.11-buster
+      - image: python:3.12.5-bullseye
     steps:
       - checkout
       - run:
