--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,4 +27,4 @@ jobs:
           # Enable linters
           black: false
           flake8: true
-          flake8_args: --max-line-length 120 --ignore=E402,W503,E203,E303,E722,E741,E731
+          flake8_args: --max-line-length 120 --ignore=E402,W503,E203,E303,E722,E741,E731,W504
